@@ -1,4 +1,4 @@
-rev_17-Dec_27-20_26
+rev_17-Dec_30-11_17
 
 Switched dafault filebrowser settings to all and ckgedit
 
@@ -166,3 +166,5 @@ Fixes https://github.com/turnermm/ckgdoku/issues/45 (left-over interwiki interna
 Dec  27
 Fixed interwiki urls that start with colon and get changed to wikilinks
 
+Dec 30
+Fixes ckgdoku/issues/47: mishandled image with relative links
